nucliadb_procs/tests/dont_compile/wrong_actor.stderr
error[E0599]: no function or associated item named `wrong` found for struct `RequestTimeKey` in the current scope
  --> tests/dont_compile/wrong_actor.rs:23:1
   |
23 | #[measure(actor = "wrong", metric = "my-test")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function or associated item not found in `RequestTimeKey`
   |
   = note: this error originates in the attribute macro `measure` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you are looking for the module in `std`, not the primitive type
   |
23 | std::#[measure(actor = "wrong", metric = "my-test")]
   | +++++
